--- a/config/module.ini
+++ b/config/module.ini
@@ -8,5 +8,5 @@ author_link  = "https://github.com/Libnamic"
 module_link  = "https://github.com/Libnamic/Omeka-S-GoogleAnalytics"
 support_link = "https://github.com/Libnamic/Omeka-S-GoogleAnalytics/issues"
 configurable = true
-version      = "1.0.0"
-omeka_version_constraint = "^1.1.0"
+version      = "1.1.1"
+omeka_version_constraint = "^1.0.0 || ^2.0.0"
