Prepared for submission to official modules list

--- a/config/module.ini
+++ b/config/module.ini
@@ -2,11 +2,11 @@
 name         = "Google Analytics"
 description  = "Includes simple support for Google Analytics in Omeka S"
 tags         = "web, analytics, tracking, visitors, google"
-license      = "-"
-author       = "Jesús Bocanegra Linares, Libnamic"
-author_link  = "https://github.com/Libnamic"
+license      = "MIT"
+author       = "Libnamic"
+author_link  = "https://omeka.libnamic.com"
 module_link  = "https://github.com/Libnamic/Omeka-S-GoogleAnalytics"
 support_link = "https://github.com/Libnamic/Omeka-S-GoogleAnalytics/issues"
 configurable = true
-version      = "1.1.1"
+version      = "1.1.2"
 omeka_version_constraint = "^1.0.0 || ^2.0.0"
