--- a/config/module.ini
+++ b/config/module.ini
@@ -9,4 +9,4 @@ module_link  = "https://github.com/Libnamic/Omeka-S-GoogleAnalytics"
 support_link = "https://github.com/Libnamic/Omeka-S-GoogleAnalytics/issues"
 configurable = true
 version      = "1.1.2"
-omeka_version_constraint = "^1.0.0 || ^2.0.0"
+omeka_version_constraint = "^3.0.0"
