Fixed GA4 support, improved settings, future extra snippet

--- a/config/module.ini
+++ b/config/module.ini
@@ -4,9 +4,9 @@ description  = "Includes simple support for Google Analytics in Omeka S"
 tags         = "web, analytics, tracking, visitors, google"
 license      = "MIT"
 author       = "Libnamic"
-author_link  = "https://omeka.libnamic.com"
+author_link  = "https://digitalhumanities.libnamic.com"
 module_link  = "https://github.com/Libnamic/Omeka-S-GoogleAnalytics"
 support_link = "https://github.com/Libnamic/Omeka-S-GoogleAnalytics/issues"
 configurable = true
-version      = "1.2.2"
-omeka_version_constraint = "^3.0.0"
+version      = "1.3"
+omeka_version_constraint = "^3.0.0 || ^4.0.0"
